--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/firebase": "^2.4.32",
-    "firebase": "^11.0.2",
+    "axios": "^1.6.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
