--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Environment files
-.env
-.env.*
-*.env
-.env.local
-.env.development
-.env.production
+# Virtual Environment
+backend/venv/
+backend/.venv/
+**/venv/
+**/__pycache__/
+*.pyc
 
 # Python specific
 __pycache__/
