--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,8 @@
-# Dependencies
-node_modules
-dist
-dist-ssr
-*.local
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Virtual Environment
-.env*
-backend/venv/
-backend/.venv/
-**/venv/
-**/__pycache__/
-*.pyc
-
-# Python specific
+# BACKEND
+*.env
+.venv/
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-ENV/
-.venv
-.pytest_cache/
-.coverage
-flask_sessions/
 
-# Database
-database/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# FRONTEND
+node_modules/
+dist/
