--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
 flask==2.3.3
-flask-cors==4.0.0
 python-dotenv==1.0.0
 mysql-connector-python==8.1.0
 Werkzeug==2.3.7
 bcrypt==4.0.1
-Flask-Session==0.5.0
 redis==5.0.1
+gunicorn==21.2.0
