--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "alp",
+  "name": "aprilslilpugs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "npm run build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
