--- a/server/.env.example
+++ b/server/.env.example
@@ -1,29 +1,26 @@
-# Flask Configuration
+# Environment
+FLASK_ENV=development  # or production
+FLASK_DEBUG=True      # should be False in production
+
+# API Configuration
+PORT=5000
 SECRET_KEY=your-secret-key-here
-FLASK_DEBUG=False
-PORT=446
 
-# Session Configuration
-SESSION_LIFETIME=3600
+# CORS Configuration (comma-separated for multiple origins)
+CORS_ORIGINS=http://localhost:5173,https://yourdomain.com
 
-# File Upload Configuration
-UPLOAD_FOLDER=uploads
-MAX_FILE_SIZE=5242880
-
-# MySQL Database Configuration
+# Database Configuration
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_USER=your-username
-MYSQL_PASSWORD=your-password
-MYSQL_DATABASE=your-database
+MYSQL_USER=your_user
+MYSQL_PASSWORD=your_password
+MYSQL_DATABASE=your_database
 
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
-REDIS_PASSWORD=your-redis-password
 
-# CORS Configuration
-CORS_ORIGINS=*
-CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
-CORS_HEADERS=Content-Type,Authorization
+# Session Configuration
+SESSION_LIFETIME=3600
