--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,7 +12,7 @@ packaging==24.2
 Pillow==10.0.0
 protobuf==4.21.12
 python-dotenv==1.0.0
-python-magic-bin==0.4.14
+python-magic>=0.4.27
 redis==4.6.0
 six==1.17.0
 Werkzeug==2.0.1
