--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "video.js": "^8.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
