--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "framer-motion": "^11.15.0",
+    "hls.js": "^1.6.14",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
