--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - HAS_NOTIFY_URL=${HAS_NOTIFY_URL}
       - HAS_TOKEN=${HAS_TOKEN}
+      - EMAIL_SERVICE=${EMAIL_SERVICE}
+      - EMAIL_USER=${EMAIL_USER}
+      - EMAIL_PASSWORD=${EMAIL_PASSWORD}
+      - NOTIFICATION_EMAIL=${NOTIFICATION_EMAIL}
