--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
+    "swr": "^2.3.7",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.17"
   },
